<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:id="@+id/menu_group" android:checkableBehavior="single">
    <item
        android:id="@+id/box_photo"
        android:orderInCategory="1"
        android:title="@string/photo_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_name"
        android:orderInCategory="1"
        android:title="@string/name_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_surname"
        android:orderInCategory="2"
        android:title="@string/surname_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_number"
        android:orderInCategory="3"
        android:title="@string/number_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_age"
        android:orderInCategory="4"
        android:title="@string/age_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_snetwork"
        android:orderInCategory="5"
        android:title="@string/snetwork_box"
        app:showAsAction="never"/>
    <item
        android:id="@+id/box_about"
        android:orderInCategory="6"
        android:title="@string/about_box"
        app:showAsAction="never"/>
    </group>
</menu>